--- a/fsw/crypto_tests/CMakeLists.txt
+++ b/fsw/crypto_tests/CMakeLists.txt
@@ -13,39 +13,8 @@
 #   ITC Team
 #   NASA IV&V
 #   ivv-itc@lists.nasa.gov
+set(PROJECT_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-#cmake_minimum_required(VERSION 2.6.4)
-cmake_minimum_required(VERSION 3.14.0)
-project(CRYPTO C)
-
-set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")
-
-OPTION(DEBUG "Debug" OFF) # Disabled by default
-IF(DEBUG)
-    ADD_DEFINITIONS(-DDEBUG)
-    add_compile_options(-ggdb)
-ENDIF(DEBUG)
-
-if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-    include(CTest)
-    enable_testing()
-endif()
-
-include_directories(fsw/public_inc)
-
-# The shared OSAL and cFE include directories should always be used
-# Note that this intentionally does NOT include PSP-specific includes, just the generic
-# Only include cFS/NOS3 directories if env var is defined
-if(DEFINED ENV{CFECORE_SOURCE_DIR}) #if ${CFECORE_SOURCE_DIR} is set, expect cFS build infrastructure to be in place.
-    include_directories(${CFECORE_SOURCE_DIR}/src/inc)
-    include_directories(${CFEPSP_SOURCE_DIR}/fsw/inc)
-    ADD_DEFINITIONS(-DNOS3)
-else()
-    #pass
-endif()
-
-if(NOT DEFINED ${PROJECT_BINARY_DIR})
-    set(PROJECT_BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)
-endif()
-
-add_subdirectory(fsw)
+add_test(NAME Process_Security
+         COMMAND ${PROJECT_BINARY_DIR}/bin/process_security tc ${PROJECT_TEST_DIR}/data/tc4.1.dat
+         WORKING_DIRECTORY ${PROJECT_TEST_DIR})
