--- a/fsw/crypto_util/CMakeLists.txt
+++ b/fsw/crypto_util/CMakeLists.txt
@@ -30,7 +30,7 @@ file( GLOB SOURCE_FILES app/*.c )
 foreach(SOURCE_PATH ${SOURCE_FILES})
     get_filename_component(EXECUTABLE_NAME ${SOURCE_PATH} NAME_WE)
 
-    if((NOT ${ENCTEST}) AND ${EXECUTABLE_NAME} STREQUAL et_validation)
+    if((NOT ${ENCTEST}) AND ${EXECUTABLE_NAME} STREQUAL et_dt_validation)
         continue()
     else()
         add_executable(${EXECUTABLE_NAME} ${SOURCE_PATH}) 
@@ -38,7 +38,7 @@ foreach(SOURCE_PATH ${SOURCE_FILES})
         target_link_libraries(${EXECUTABLE_NAME} LINK_PUBLIC Crypto)
     endif()
 
-    if(${ENCTEST} AND ${EXECUTABLE_NAME} STREQUAL et_validation)
+    if(${ENCTEST} AND ${EXECUTABLE_NAME} STREQUAL et_dt_validation)
         target_link_libraries(${EXECUTABLE_NAME} PUBLIC ${Python3_LIBRARIES}) 
         target_include_directories(${EXECUTABLE_NAME} PUBLIC ${Python3_INCLUDE_DIRS}) 
     endif()
