Revert "Cleanup for CR 12/6"
This reverts commit 50506d6bb67c29f3fd510f713b7a8ab623f23d7d.

--- a/fsw/crypto_tests/CMakeLists.txt
+++ b/fsw/crypto_tests/CMakeLists.txt
@@ -15,6 +15,10 @@
 #   ivv-itc@lists.nasa.gov
 set(PROJECT_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
+add_test(NAME Process_Security
+         COMMAND ${PROJECT_BINARY_DIR}/bin/process_security tc ${PROJECT_TEST_DIR}/data/tc4.1.dat
+         WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+
 add_test(NAME UT_TC_APPLY
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_tc_apply 
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
