--- a/fsw/crypto_tests/CMakeLists.txt
+++ b/fsw/crypto_tests/CMakeLists.txt
@@ -16,10 +16,16 @@
 
 set(PROJECT_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_test(NAME Process_Security
-         COMMAND ${PROJECT_BINARY_DIR}/bin/process_security tc ${PROJECT_TEST_DIR}/data/tc4.1.dat
-         WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+# add_test(NAME Process_Security
+#          COMMAND ${PROJECT_BINARY_DIR}/bin/process_security tc ${PROJECT_TEST_DIR}/data/tc4.1.dat
+#          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
 add_test(NAME UT_TC_APPLY
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_tc_apply 
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+
+if(${ENCTEST})
+    add_test(NAME ET_DT_VALIDATION
+             COMMAND ${PROJECT_BINARY_DIR}/bin/et_dt_validation 
+             WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+endif()
