--- a/.github/workflows/citests.yml
+++ b/.github/workflows/citests.yml
@@ -1,4 +1,4 @@
-name: CMake
+name: CITests
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Debug
+  BUILD_TYPE: DEBUG ENCTEST
 
 jobs:
   build:
@@ -21,7 +21,8 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Dependencies
-      run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev
+      run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev python3
+      run: sudo pip install pycryptodome
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
