--- a/.github/workflows/citests.yml
+++ b/.github/workflows/citests.yml
@@ -22,6 +22,8 @@ jobs:
 
     - name: Install Dependencies
       run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev python3
+
+    - name: Install Python Libraries
       run: sudo pip install pycryptodome
 
     - name: Configure CMake
