--- a/.github/workflows/citests.yml
+++ b/.github/workflows/citests.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: DEBUG ENCTEST
+  BUILD_TYPE: DEBUG 
 
 jobs:
   build:
@@ -33,7 +33,7 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -DDEBUG=1 -DENCTEST=1
 
     - name: Test
       working-directory: ${{github.workspace}}/build
