--- a/.github/workflows/utest.yml
+++ b/.github/workflows/utest.yml
@@ -23,9 +23,6 @@ jobs:
     - name: Install Dependencies
       run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev python3
 
-    - name: Install Python Libraries
-      run: sudo pip install pycryptodome
-
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
@@ -39,5 +36,5 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ${{github.workspace}}/build/ut_tc_apply
+      run: ${{github.workspace}}/build/bin/ut_tc_apply
       
