--- a/.github/workflows/utest.yml
+++ b/.github/workflows/utest.yml
@@ -2,7 +2,7 @@ name: Unit Tests
 
 on:
   push:
-    branches: [ ut_tc_apply-enctests ]
+    branches: [ collab_main ]
   #pull_request:
   #  branches: [ main ]
 
