--- a/fsw/crypto_util/CMakeLists.txt
+++ b/fsw/crypto_util/CMakeLists.txt
@@ -19,13 +19,13 @@
 include_directories(include)
 include_directories(../crypto/public_inc) 
 
-if(ENCTEST)
+if(${ENCTEST})
     find_package (Python3 REQUIRED COMPONENTS Interpreter Development)
     execute_process(COMMAND pip show pycryptodome RESULT_VARIABLE EXIT_CODE OUTPUT_QUIET)
     if(NOT ${EXIT_CODE} EQUAL 0)
         message(FATAL_ERROR "The \"pycryptodome\" Python3 package is not installed, and is required for ENCTEST.")
     endif()
-endif(ENCTEST)
+endif(${ENCTEST})
 
 aux_source_directory(src UTIL_SRC_FILES)
 aux_source_directory(app APP_SRC_FILES) 
