--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -1,8 +1,10 @@
 name: Validation Tests
 
-on: [push, pull_request]
+on:
+  push:
     branches: [ collab_main ]
-
+  pull_request:
+    branches: [ collab_main ]
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: DEBUG 
