--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -1,10 +1,9 @@
 name: Validation Tests
 
-on:
+on: 
   push:
     branches: [ collab_main ]
-  pull_request:
-    branches: [ collab_main ]
+  pull_request
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: DEBUG 
