--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ CI_Updates ]
   pull_request:
-    branches: ${{ github.head_ref }}
+    branches: [${{ github.head_ref }}]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
