--- a/.github/workflows/utest.yml
+++ b/.github/workflows/utest.yml
@@ -3,8 +3,8 @@ name: Unit Tests
 on: 
   push:
     branches: [ collab_main ]
-  pull_request
-
+  pull_request:
+  
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: DEBUG 
