--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -2,7 +2,7 @@ name: Validation Tests
 
 on: 
   push:
-    branches: [ collab_main ]
+    branches: [ build_changes ]
   pull_request:
 
 env:
@@ -39,3 +39,15 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ${{github.workspace}}/build/bin/et_dt_validation
+
+    - name: Code Coverage
+      working-directory: ${{github.workspace}}/build
+      # Execute tests defined by the CMake configuration.  
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: make gcov
+    
+    - name: Upload 
+      working-directory: ${{github.workspace}}/build/coverage
+      uses: codecov/codecov-action@v1
+      with:
+        files: ./crypto_aos.c.gcov ./crypto_config.c.gcov ./crypto_mc.c.gcov ./crypto_tc.c.gcov ./crypto_user.c.gcov ./crypto.c.gcov ./crypto_key_mgmt.c.gcov ./crypto_print.c.gcov ./crypto_tm.c.gcov ./sadb_routine_inmemory.template.c.gcov
