--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -44,9 +44,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: make gcov
-      run: ls
-      run: ls ./coverage
+      run: make gcov && ls && ls ./coverage
     
     # - name: Upload 
     #   uses: codecov/codecov-action@v1
