--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -2,7 +2,7 @@ name: Validation Tests
 
 on: 
   push:
-    branches: [ build_changes ]
+    branches: [ collab_main ]
   pull_request:
 
 env:
@@ -45,10 +45,6 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: make gcov
-    
-    - name: Verify DIR
-      working-directory: ${{github.workspace}}/build
-      run: pwd && ls ./coverage
 
     - name: Upload 
       uses: codecov/codecov-action@v1
