adding mysql-devel to CentOS ansible script

--- a/support/ansible/cryptolib-centos.yml
+++ b/support/ansible/cryptolib-centos.yml
@@ -42,6 +42,7 @@
           - python3-devel
           - python3-pip
           - kernel-devel
+          - mysql-devel
           # add additional packages here
 
     - name: Install pycryptodome
