--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
+cmake-build-debug
 _deps
 
 DartConfiguration.tcl
