--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,21 @@ else()
     list(APPEND LIB_SRC_FILES ${LIB_SRC_MYSQL_FILES})
 endif()
 
+if(LIBGCRYPT)
+    aux_source_directory(src_cryptography/src_libgcrypt LIB_SRC_LIBGCRYPT_FILES)
+    list(APPEND LIB_SRC_FILES ${LIB_SRC_LIBGCRYPT_FILES})
+else()
+    aux_source_directory(src_feature_stubs/cryptography_libgcrypt_stub LIB_SRC_LIBGCRYPT_FILES)
+    list(APPEND LIB_SRC_FILES ${LIB_SRC_LIBGCRYPT_FILES})
+endif()
+
+if(KMCCRYPTO)
+    aux_source_directory(src_cryptography/src_kmc_crypto_service LIB_SRC_KMC_CRYPTO_FILES)
+    list(APPEND LIB_SRC_FILES ${LIB_SRC_KMC_CRYPTO_FILES})
+else()
+    aux_source_directory(src_feature_stubs/cryptography_kmc_stub LIB_SRC_KMC_CRYPTO_FILES)
+    list(APPEND LIB_SRC_FILES ${LIB_SRC_KMC_CRYPTO_FILES})
+endif()
 
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
     include(CTest)
