--- a/.github/workflows/utest.yml
+++ b/.github/workflows/utest.yml
@@ -47,7 +47,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ${{github.workspace}}/build/bin/ut_crypt
+      run: ${{github.workspace}}/build/bin/ut_crypt0
 
 
       
