Breaking Up Unit tests, adding additonal builds

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,6 +33,14 @@ add_test(NAME UT_CRYPTO
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_crypto 
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
+add_test(NAME UT_CRYPTO_AOS
+         COMMAND ${PROJECT_BINARY_DIR}/bin/ut_crypto_aos 
+         WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+
+add_test(NAME UT_CRYPTO_MC
+         COMMAND ${PROJECT_BINARY_DIR}/bin/ut_crypto_mc 
+         WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+
 if(${ENCTEST})
     add_test(NAME ET_DT_VALIDATION
              COMMAND ${PROJECT_BINARY_DIR}/bin/et_dt_validation 
