--- a/.github/workflows/utest.yml
+++ b/.github/workflows/utest.yml
@@ -48,6 +48,18 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ${{github.workspace}}/build/bin/ut_crypto
+    
+    - name: Test-CRYPTO_AOS
+      working-directory: ${{github.workspace}}/build
+      # Execute tests defined by the CMake configuration.  
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: ${{github.workspace}}/build/bin/ut_crypto_aos
+
+    - name: Test-CRYPTO_MC
+      working-directory: ${{github.workspace}}/build
+      # Execute tests defined by the CMake configuration.  
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: ${{github.workspace}}/build/bin/ut_crypto_mc
 
 
       
