--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -39,10 +39,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    
-    - name: Install Dependencies
-      run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev python3
-      
+          
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
@@ -52,11 +49,11 @@ jobs:
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
         # queries: ./path/to/local/query, your-org/your-repo/queries@main
-
+      
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
     - name: Autobuild
-    #  uses: github/codeql-action/autobuild@v1
+      #uses: github/codeql-action/autobuild@v1
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
@@ -66,6 +63,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
+        sudo apt-get install -y libgpg-error-dev libgcrypt20-dev python3
         cmake --build ${{github.workspace}}/build
         make
     #   make bootstrap
